Temporary chunk to count flags

--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -376,3 +376,13 @@ subsetByOverlaps(ROI9.all, granges(ROI9.range)) |> flagAll() |> as.data.frame()
 
 subsetByOverlaps(ROI9.all |> swap(), ROI9.range$query)
 ```
+
+
+```{r}
+
+x <- rbind(
+  sapply(gbs, \(gb) table(flagPairs(gb)$pairs))
+)
+
+
+```
