update vignette to, uh, actually work?

--- a/vignettes/dNdS.Rmd
+++ b/vignettes/dNdS.Rmd
@@ -35,12 +35,22 @@ suppressPackageStartupMessages({
   library('GenomicBreaks')
   requireNamespace('GenomicFeatures')
   library('ggplot2')
+  library("tidyverse")
   library("BreakpointsData")
+  library("GenomicFeatures")
 })
-(genomes <- OikScrambling:::loadAllGenomes())
 ```
 
 # Genomic breaks
+
+Load all of the necessary objects beforehand.
+
+```
+(genomes <- OikScrambling:::loadAllGenomes())
+(annots <- OikScrambling:::loadAllAnnotations())
+
+```
+
 
 
 ## dN/dS values
