--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -33,7 +33,6 @@ Packages and data
 ```{r load_pacakges_and_data}
 suppressPackageStartupMessages({
   library('GenomicBreaks')
-  requireNamespace('GenomicFeatures')
   library('ggplot2')
   library("BreakpointsData")
 })
@@ -112,15 +111,15 @@ annotateWithReps.GBreaksSimpleList <- function(gbl, reps) {
 }
 ```
 
-Gene annotations
-----------------
+Transcript annotations
+----------------------
 
-```{r load_genes}
-(annots <- OikScrambling:::loadAllAnnotations())
+```{r annotate_transcripts}
+(transcripts <- OikScrambling:::loadAllTranscriptsGR())
 
-annotateWithGenes <-  function(x, annotT, annotQ) UseMethod("annotateWithGenes")
+annotateWithTranscripts <-  function(x, annotT, annotQ) UseMethod("annotateWithTranscripts")
 
-annotateWithGenes.GRanges <- function(x, annotT, annotQ = NULL) {
+annotateWithTranscripts.GRanges <- function(x, annotT, annotQ = NULL) {
   # Taken from CAGEr (and I am the author)
   ranges2names <- function (rangesA, rangesB) {
     if (is.null(names(rangesB))) 
@@ -132,40 +131,40 @@ annotateWithGenes.GRanges <- function(x, annotT, annotQ = NULL) {
     names <- unstrsplit(names, ";")
     Rle(names)
   }
-  x$genes <- ranges2names(x, GenomicFeatures::genes(annotT))
-  x$genes[x$genes == ''] <- NA
+  x$transcripts <- ranges2names(x, annotT)
+  x$transcripts[x$transcripts == ''] <- NA
   x
 }
 
-annotateWithGenes.GBreaks <- function(x, annotT, annotQ) {
-  x$query <- annotateWithGenes.GRanges(x$query, annotQ)
-  x       <- annotateWithGenes.GRanges(x,       annotT)
+annotateWithTranscripts.GBreaks <- function(x, annotT, annotQ) {
+  x$query <- annotateWithTranscripts.GRanges(x$query, annotQ)
+  x       <- annotateWithTranscripts.GRanges(x,       annotT)
   x
 }
 
-annotateWithGenes.GRangesList <- function(x, annotT, annotQ = annotT) {
-  x$Oki_Osa <- x$Oki_Osa |> annotateWithGenes(annotT$Oki, annotQ$Osa)
-  x$Oki_Bar <- x$Oki_Bar |> annotateWithGenes(annotT$Oki, annotQ$Bar)
-  x$Oki_Kum <- x$Oki_Kum |> annotateWithGenes(annotT$Oki, annotQ$Kum)
-  x$Oki_Aom <- x$Oki_Aom |> annotateWithGenes(annotT$Oki, annotQ$Aom)
-  x$Oki_Nor <- x$Oki_Nor |> annotateWithGenes(annotT$Oki, annotQ$Nor)
+annotateWithTranscripts.GRangesList <- function(x, annotT, annotQ = annotT) {
+  x$Oki_Osa <- x$Oki_Osa |> annotateWithTranscripts(annotT$Oki, annotQ$Osa)
+  x$Oki_Bar <- x$Oki_Bar |> annotateWithTranscripts(annotT$Oki, annotQ$Bar)
+  x$Oki_Kum <- x$Oki_Kum |> annotateWithTranscripts(annotT$Oki, annotQ$Kum)
+  x$Oki_Aom <- x$Oki_Aom |> annotateWithTranscripts(annotT$Oki, annotQ$Aom)
+  x$Oki_Nor <- x$Oki_Nor |> annotateWithTranscripts(annotT$Oki, annotQ$Nor)
   
-  x$Osa_Oki <- x$Osa_Oki |> annotateWithGenes(annotT$Osa, annotQ$Oki)
-  x$Osa_Bar <- x$Osa_Bar |> annotateWithGenes(annotT$Osa, annotQ$Bar)
-  x$Osa_Kum <- x$Osa_Kum |> annotateWithGenes(annotT$Osa, annotQ$Kum)
-  x$Osa_Aom <- x$Osa_Aom |> annotateWithGenes(annotT$Osa, annotQ$Aom)
-  x$Osa_Nor <- x$Osa_Nor |> annotateWithGenes(annotT$Osa, annotQ$Nor)
+  x$Osa_Oki <- x$Osa_Oki |> annotateWithTranscripts(annotT$Osa, annotQ$Oki)
+  x$Osa_Bar <- x$Osa_Bar |> annotateWithTranscripts(annotT$Osa, annotQ$Bar)
+  x$Osa_Kum <- x$Osa_Kum |> annotateWithTranscripts(annotT$Osa, annotQ$Kum)
+  x$Osa_Aom <- x$Osa_Aom |> annotateWithTranscripts(annotT$Osa, annotQ$Aom)
+  x$Osa_Nor <- x$Osa_Nor |> annotateWithTranscripts(annotT$Osa, annotQ$Nor)
   
-  x$Bar_Oki <- x$Bar_Oki |> annotateWithGenes(annotT$Bar, annotQ$Oki)
-  x$Bar_Osa <- x$Bar_Osa |> annotateWithGenes(annotT$Bar, annotQ$Osa)
-  x$Bar_Kum <- x$Bar_Kum |> annotateWithGenes(annotT$Bar, annotQ$Kum)
-  x$Bar_Aom <- x$Bar_Aom |> annotateWithGenes(annotT$Bar, annotQ$Aom)
-  x$Bar_Nor <- x$Bar_Nor |> annotateWithGenes(annotT$Bar, annotQ$Nor)
+  x$Bar_Oki <- x$Bar_Oki |> annotateWithTranscripts(annotT$Bar, annotQ$Oki)
+  x$Bar_Osa <- x$Bar_Osa |> annotateWithTranscripts(annotT$Bar, annotQ$Osa)
+  x$Bar_Kum <- x$Bar_Kum |> annotateWithTranscripts(annotT$Bar, annotQ$Kum)
+  x$Bar_Aom <- x$Bar_Aom |> annotateWithTranscripts(annotT$Bar, annotQ$Aom)
+  x$Bar_Nor <- x$Bar_Nor |> annotateWithTranscripts(annotT$Bar, annotQ$Nor)
   x
 }
 
-annotateWithGenes.SimpleList <- function(x, annotT, annotQ = annotT)
-  annotateWithGenes.GRangesList(x, annotT = annotT, annotQ = annotQ)
+annotateWithTranscripts.SimpleList <- function(x, annotT, annotQ = annotT)
+  annotateWithTranscripts.GRangesList(x, annotT = annotT, annotQ = annotQ)
 ```
 
 Mapped alignments
@@ -205,7 +204,7 @@ gbs$Bar_Kum <- load_genomic_breaks_("Bar2_p4__KUM-M3-7f.gff.gz",            Bar2
 gbs$Bar_Aom <- load_genomic_breaks_("Bar2_p4__AOM-5-5f.gff.gz",             Bar2_p4,     AOM_5,         longShort$Bar) |> annotateWithReps.GBreaks(reps$Bar, reps$Aom)
 gbs$Bar_Nor <- load_genomic_breaks_("Bar2_p4__OdB3.gff.gz",                 Bar2_p4,     OdB3,          longShort$Bar) |> annotateWithReps.GBreaks(reps$Bar, reps$Nor)
 
-gbs <- annotateWithGenes(gbs, annots)
+gbs <- annotateWithTranscripts(gbs, annots)
 gbs <- sapply(gbs, flagAll) |> SimpleList()
 ```
 
@@ -224,9 +223,9 @@ unal[ 1:5 ] <- BiocParallel::bplapply(unal[ 1:5 ], annotateWithReps.GRanges, rep
 unal[ 6:10] <- BiocParallel::bplapply(unal[ 6:10], annotateWithReps.GRanges, reps$Osa)
 unal[11:15] <- BiocParallel::bplapply(unal[11:15], annotateWithReps.GRanges, reps$Bar)
 
-unal[ 1:5 ] <- BiocParallel::bplapply(unal[ 1:5 ], annotateWithGenes, annots$Oki)
-unal[ 6:10] <- BiocParallel::bplapply(unal[ 6:10], annotateWithGenes, annots$Osa)
-unal[11:15] <- BiocParallel::bplapply(unal[11:15], annotateWithGenes, annots$Bar)
+unal[ 1:5 ] <- BiocParallel::bplapply(unal[ 1:5 ], annotateWithTranscripts, annots$Oki)
+unal[ 6:10] <- BiocParallel::bplapply(unal[ 6:10], annotateWithTranscripts, annots$Osa)
+unal[11:15] <- BiocParallel::bplapply(unal[11:15], annotateWithTranscripts, annots$Bar)
 ```
 
 Coalescing alignments
@@ -239,7 +238,7 @@ coa[ 6:10] <- BiocParallel::bplapply(coa[ 6:10], flagLongShort, longShort$Osa)
 coa[11:15] <- BiocParallel::bplapply(coa[11:15], flagLongShort, longShort$Bar)
 
 coa <- annotateWithReps.GBreaksSimpleList(coa, reps)
-coa <- annotateWithGenes(coa, annots)
+coa <- annotateWithTranscripts(coa, annots)
 
 coa <- sapply(coa, flagAll) |> SimpleList()
 ```
@@ -261,9 +260,9 @@ unmap[ 1:5 ] <- BiocParallel::bplapply(unmap[ 1:5 ], annotateWithReps.GRanges, r
 unmap[ 6:10] <- BiocParallel::bplapply(unmap[ 6:10], annotateWithReps.GRanges, reps$Osa)
 unmap[11:15] <- BiocParallel::bplapply(unmap[11:15], annotateWithReps.GRanges, reps$Bar)
 
-unmap[ 1:5 ] <- BiocParallel::bplapply(unmap[ 1:5 ], annotateWithGenes, annots$Oki)
-unmap[ 6:10] <- BiocParallel::bplapply(unmap[ 6:10], annotateWithGenes, annots$Osa)
-unmap[11:15] <- BiocParallel::bplapply(unmap[11:15], annotateWithGenes, annots$Bar)
+unmap[ 1:5 ] <- BiocParallel::bplapply(unmap[ 1:5 ], annotateWithTranscripts, annots$Oki)
+unmap[ 6:10] <- BiocParallel::bplapply(unmap[ 6:10], annotateWithTranscripts, annots$Osa)
+unmap[11:15] <- BiocParallel::bplapply(unmap[11:15], annotateWithTranscripts, annots$Bar)
 ```
 
 Mapped unaligned regions
@@ -295,7 +294,7 @@ unalMap[ 6:10] <- BiocParallel::bplapply(unalMap[ 6:10], flagLongShort, longShor
 unalMap[11:15] <- BiocParallel::bplapply(unalMap[11:15], flagLongShort, longShort$Bar)
 
 unalMap <- annotateWithReps.GBreaksSimpleList(unalMap, reps)
-unalMap <- annotateWithGenes(unalMap, annots)
+unalMap <- annotateWithTranscripts(unalMap, annots)
 unalMap <- sapply(unalMap, flagAll) |> SimpleList()
 ```
 
@@ -336,7 +335,7 @@ tra[ 6:10] <- BiocParallel::bplapply(tra[ 6:10], flagLongShort, longShort$Osa)
 tra[11:15] <- BiocParallel::bplapply(tra[11:15], flagLongShort, longShort$Bar)
 
 tra <- annotateWithReps.GBreaksSimpleList(tra, reps)
-tra <- annotateWithGenes(tra, annots)
+tra <- annotateWithTranscripts(tra, annots)
 tra <- sapply(tra, flagAll) |> SimpleList()
 ```
 
@@ -367,7 +366,7 @@ coa2[ 6:10] <- BiocParallel::bplapply(coa2[ 6:10], flagLongShort, longShort$Osa)
 coa2[11:15] <- BiocParallel::bplapply(coa2[11:15], flagLongShort, longShort$Bar)
 
 coa2 <- annotateWithReps.GBreaksSimpleList(coa2, reps)
-coa2 <- annotateWithGenes(coa2, annots)
+coa2 <- annotateWithTranscripts(coa2, annots)
 coa2 <- sapply(coa2, flagAll) |> SimpleList()
 ```
 
@@ -387,9 +386,9 @@ unmap2[ 1:5 ] <- BiocParallel::bplapply(unmap2[ 1:5 ], annotateWithReps.GRanges,
 unmap2[ 6:10] <- BiocParallel::bplapply(unmap2[ 6:10], annotateWithReps.GRanges, reps$Osa)
 unmap2[11:15] <- BiocParallel::bplapply(unmap2[11:15], annotateWithReps.GRanges, reps$Bar)
 
-unmap2[ 1:5 ] <- BiocParallel::bplapply(unmap2[ 1:5 ], annotateWithGenes, annots$Oki)
-unmap2[ 6:10] <- BiocParallel::bplapply(unmap2[ 6:10], annotateWithGenes, annots$Osa)
-unmap2[11:15] <- BiocParallel::bplapply(unmap2[11:15], annotateWithGenes, annots$Bar)
+unmap2[ 1:5 ] <- BiocParallel::bplapply(unmap2[ 1:5 ], annotateWithTranscripts, annots$Oki)
+unmap2[ 6:10] <- BiocParallel::bplapply(unmap2[ 6:10], annotateWithTranscripts, annots$Osa)
+unmap2[11:15] <- BiocParallel::bplapply(unmap2[11:15], annotateWithTranscripts, annots$Bar)
 ```
 
 Translocated regions 2
@@ -405,7 +404,7 @@ tra2[ 6:10] <- BiocParallel::bplapply(tra2[ 6:10], flagLongShort, longShort$Osa)
 tra2[11:15] <- BiocParallel::bplapply(tra2[11:15], flagLongShort, longShort$Bar)
 
 tra2 <- annotateWithReps.GBreaksSimpleList(tra2, reps)
-tra2 <- annotateWithGenes(tra2, annots)
+tra2 <- annotateWithTranscripts(tra2, annots)
 
 tra2 <- sapply(tra2, flagAll) |> SimpleList()
 ```
