--- a/vignettes/dNdS.Rmd
+++ b/vignettes/dNdS.Rmd
@@ -46,17 +46,16 @@ load("BreakPoints.Rdata")
 ```
 
 # Genomic breaks
+The purpose of this vignette is to explore the various relationships of dN/dS - i.e., 
+coding sequence substitution rate - to synteny. The input to this vignette is similar
+to what is produced in the `vignette("OrthogroupSyntenies", package = "OikScrambling")`.
 
-## dN/dS values
-After you have loaded the transcripts using the `loadAllTranscriptsGR` function,
-you should have a `GRanges` object for every species with one interval per gene
-and dN/dS metadata columns. 
+The two important objects are `orthoPairs` and `orthoBreaks`, containing the orthologue-
+based `GBreaks` objects and coalesced `GBreaks` objects, respectively.
 
-Similar to the `GBreaks` object in the `OrthogroupSyntenies` vignette. 
+The steps to produce `orthoPairs` and `orthoBreaks` are reproduced below.
 
-The `GBreaks` object from the `OrthogroupSyntenies` vignette is suitable.
-
-```{r create_dNdS_GUIDANCE2_orthopairs, fig.height=12, fig.width=8.5, dev=c('svg', 'png')}
+```{r getting_orthopairs}
 orthoPairToGBreaks <- function(name1, name2, annot1, annot2) {
   orthoPairs <- load_one_to_ones(
     system.file("extdata/OrthoFinder/N19.tsv", package = "BreakpointsData"),
@@ -69,7 +68,7 @@ orthoPairToGBreaks <- function(name1, name2, annot1, annot2) {
     prefix <- sub(not_prefix, "", prefix)             # Finalise prefix
     IDs <- sub(prefix, "", IDs)                       # Remove prefix from IDS
     names(annot) <- annot$tx_name                     # Store transcript name in names slot
-    gr <- granges(annot[IDs], use.mcols=T)            # Don't! discard metadata. Sort by ID
+    gr <- annot[IDs]                                  # Sort by ID
     strand(gr) <- "*"                                 # Make strandless
     gr                                                # Return the object
   }
@@ -90,7 +89,7 @@ orthoPairs$Oki_Kum <- orthoPairToGBreaks("OKI2018_I69.v2.prot.longest.fa_1", "KU
 orthoPairs$Oki_Aom <- orthoPairToGBreaks("OKI2018_I69.v2.prot.longest.fa_1", "AOM-5-5f.prot.longest.fa_1"
                                         , transcripts$Oki, transcripts$Aom)
 orthoPairs$Oki_Nor <- orthoPairToGBreaks("OKI2018_I69.v2.prot.longest.fa_1", "OdB3.v1.0.prot.fa_1.nohaplo"
-                                       , transcripts$Oki, transcripts$Nor)
+                                        , transcripts$Oki, transcripts$Nor)
 
 orthoPairs$Osa_Bar <- orthoPairToGBreaks("OSKA2016v1.9.prot.longest.fa_1", "Bar2_p4.Flye.prot.longest.fa_1"
                                         , transcripts$Osa, transcripts$Bar)
@@ -101,7 +100,7 @@ orthoPairs$Osa_Kum <- orthoPairToGBreaks("OSKA2016v1.9.prot.longest.fa_1", "KUM-
 orthoPairs$Osa_Aom <- orthoPairToGBreaks("OSKA2016v1.9.prot.longest.fa_1", "AOM-5-5f.prot.longest.fa_1"
                                         , transcripts$Osa, transcripts$Aom)
 orthoPairs$Osa_Nor <- orthoPairToGBreaks("OSKA2016v1.9.prot.longest.fa_1", "OdB3.v1.0.prot.fa_1.nohaplo"
-                                       , transcripts$Osa, transcripts$Nor)
+                                        , transcripts$Osa, transcripts$Nor)
 
 
 orthoPairs$Bar_Osa <- orthoPairToGBreaks("Bar2_p4.Flye.prot.longest.fa_1", "OSKA2016v1.9.prot.longest.fa_1"
@@ -113,20 +112,20 @@ orthoPairs$Bar_Kum <- orthoPairToGBreaks("Bar2_p4.Flye.prot.longest.fa_1", "KUM-
 orthoPairs$Bar_Aom <- orthoPairToGBreaks("Bar2_p4.Flye.prot.longest.fa_1", "AOM-5-5f.prot.longest.fa_1"
                                         , transcripts$Bar, transcripts$Aom)
 orthoPairs$Bar_Nor <- orthoPairToGBreaks("Bar2_p4.Flye.prot.longest.fa_1", "OdB3.v1.0.prot.fa_1.nohaplo"
-                                       , transcripts$Bar, transcripts$Nor)
+                                        , transcripts$Bar, transcripts$Nor)
 
+sapply(orthoPairs, length)
 orthoPairs[ 1:5 ] <- sapply(orthoPairs[ 1:5 ],  flagLongShort, longShort$Oki)
 orthoPairs[ 6:10] <- sapply(orthoPairs[ 6:10],  flagLongShort, longShort$Osa)
 orthoPairs[11:15] <- sapply(orthoPairs[11:15],  flagLongShort, longShort$Bar)
 ```
 
-Using these transcript-based `GBreaks` objects, you can annotate those
-transcripts with arbitrary metadata. Note that the transcript identifier
-is relative to the target.
+The `orthoPairs` object contains a `GRanges` object for every species pair,
+where each entry has a `GBreaks` object that contains dN/dS metadata columns. 
 
-TODO resolve cases where query metadata is not precisely equal to target metadata
-
-Now, we can get to plotting.
+This object is sufficient to start exploring the relationship of dN/dS to 
+synteny. First, plot global patterns of dN/dS between chromosomes and chromosome
+arms.
 
 ```{r plot_init_orthopairs_dNdS_GUIDANCE2, fig.height=4, fig.width=6, dev=c("svg", "png")}
 ggplot(tibble(as.data.frame(orthoPairs$Oki_Osa))) +
@@ -137,7 +136,7 @@ ggplot(tibble(as.data.frame(orthoPairs$Oki_Osa))) +
   ggtitle('dN/dS by chromosome and chromosome arm for Oki/Osa')
 ```
 
-Notice that an unplaced scaffold appears to have a gene that was used for the dN/dS analysis. Let's filter those out.
+Notice that an unplaced scaffold contains a gene that was used for the dN/dS analysis. Let's filter those out.
 
 ```{r plot_enumerate_dNdS_GUIDANCE2, fig.height=4, fig.width=6, dev=c("svg", "png")}
 ggplot(tibble(as.data.frame(orthoPairs$Oki_Osa)) %>% filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR'))) +
@@ -180,13 +179,13 @@ ggplot(tibble(as.data.frame(orthoPairs$Bar_Oki)) %>% filter(seqnames %in% c('Chr
   ggtitle('dN/dS by chromosome and chromosome arm for Bar/Oki')
 ```
 
-## Coalescing orthogroups
-As in the `OrthogroupSyntenies` vignette, we'll need to coalesce the orthogroup
-pairs in order to continue exploring the dN/dS values.
+For the rest of the vignette, we will be relating dN/dS values to synteny
+in more specific ways. To do that, we'll need the coalesced `GBreaks` object.
 
-First, remove overlapping regions.
+```{r getting_orthobreaks}
+transcripts$Bar |> length()
+transcripts$Bar |> reduce(min = 0) |> length()
 
-```{r flag_remove_overlaps}
 flagOverlaps <- function(gr) {
   # Find overlaps
   ov <- findOverlaps(gr)
@@ -196,28 +195,20 @@ flagOverlaps <- function(gr) {
   seq_along(gr) %in% idx
 }
 
+transcripts$Bar[flagOverlaps(transcripts$Bar)]
+
+# Show examples
+orthoPairs$Oki_Osa[flagOverlaps(orthoPairs$Oki_Osa)]
+orthoPairs$Oki_Osa$query[flagOverlaps(orthoPairs$Oki_Osa$query)]
+
+# Remove and show how much was removed
+
 orthoPairsFiltered <- sapply(orthoPairs, function(gb) {
   gb <- gb[!flagOverlaps(gb)]
   gb <- gb[!flagOverlaps(gb$query)]
   gb
 }) |> SimpleList()
-sapply(orthoPairsFiltered, length)
-```
-
-Now, coalesce the filtered orthogroup pairs into syntenic blocks. Note the code
-below has been modified from the `OrthogroupsSynteny` vignette to accommodate
-gluing dN/dS into the coalesced blocks.
-
-```{r coalesce_orthopairs}
-# A little helper to extract dN/dS values from the orthoPairs object.
-dNdSFromOrthoPairs <- function(orthoPair, tx_name, column_name='dNdS_GUIDANCE2'){
-  if(tx_name %in% orthoPair$tx_name){
-    dnds <- as.data.frame(orthoPair[orthoPair$tx_name == tx_name,])[[column_name]]
-  } else {
-    dnds <- NA
-  }
-  dnds
-}
+sapply(orthoPairs, length) - sapply(orthoPairsFiltered, length)
 
 coalOrtho <- function(gb) {
   # Coalesce
@@ -227,40 +218,124 @@ coalOrtho <- function(gb) {
   ov <- findOverlaps(coal, gb)
   
   # Extract gene names mapped to each blocks
-  geneNames <- split(names(gb)[subjectHits(ov)], queryHits(ov))
+  coal$geneNames <- CharacterList(split(names(gb)[subjectHits(ov)], queryHits(ov))) |> unname()
+  # We can use the `ov` object for query ranges as well because of the way `coal` was constructed.
+  coal$query$geneNames <- CharacterList(split(names(gb$query)[subjectHits(ov)], queryHits(ov))) |> unname()
   
-  # Concatenate them as single strings and graft them to the coal object
-  coal$geneNames <- sapply(geneNames, paste, collapse = ", ")
-  
-  # Graft dN/dS values too.
-  coal$dNdS <- BiocParallel::bplapply(geneNames, function(name) {
-    if(length(name) == 1){
-      dnds = dNdSFromOrthoPairs(gb, tx_name=name, column_name='dNdS_GUIDANCE2')
-    } else {
-      dnds = unlist(sapply(name, function(gene) {
-        dNdSFromOrthoPairs(gb, tx_name=gene, column_name='dNdS_GUIDANCE2')
-      }))
-    }
-    dnds
-  })
-    
+  # Extract dNdS values
+  coal$dNdS_GUIDANCE2  <- NumericList(split(gb$dNdS_GUIDANCE2 [subjectHits(ov)], queryHits(ov)))
+  coal$dNdS_HmmCleaner <- NumericList(split(gb$dNdS_HmmCleaner[subjectHits(ov)], queryHits(ov)))
+  coal$dNdS_PRANK      <- NumericList(split(gb$dNdS_PRANK     [subjectHits(ov)], queryHits(ov)))
+  # We just copy dNdS values to query ranges because they are the same.
+  coal$query$dNdS_GUIDANCE2  <- coal$dNdS_GUIDANCE2
+  coal$query$dNdS_HmmCleaner <- coal$dNdS_HmmCleaner
+  coal$query$dNdS_PRANK      <- coal$dNdS_PRANK
+
   # Count genes per syntenic block
-  coal$geneNumber <- sapply(geneNames, length)
+  coal$geneNumber <- sapply(coal$geneNames, length)
   
   coal
 }
-orthoBlocks <- sapply(orthoPairsFiltered, coalOrtho) |> SimpleList()
 
+orthoBlocks <- sapply(orthoPairsFiltered, coalOrtho) |> SimpleList()
+sapply(orthoBlocks, length)
 orthoBlocks[ 1:5 ] <- sapply(orthoBlocks[ 1:5 ],  flagLongShort, longShort$Oki)
 orthoBlocks[ 6:10] <- sapply(orthoBlocks[ 6:10],  flagLongShort, longShort$Osa)
 orthoBlocks[11:15] <- sapply(orthoBlocks[11:15],  flagLongShort, longShort$Bar)
 ```
 
-Now that we have orthoblocks, let's assess how dN/dS relates to gene synteny.
-First, create a function to look at blocks with X genes, then look up their
-dN/dS values.
+## Relating dN/dS values to synteny
+The `orthoBlocks` object contains coalesced alignments based on orthologous protein sequences. This is therefore suitable to examine more specific relationships between dN/dS and synteny.
 
-```{r dnds_synteny}
+For instance, how do dN/dS values compare between individual genes and genes within syntenic blocks?
+
+```{r evaluating_dnds_blocks_oki_osa_1 fig.height=4, fig.width=6, dev=c("svg", "png")}
+# Make a function to retrieve dN/dS values based on how many genes are in a block.
+get_dnds <- function(orthoblocks, alignment_type="dNdS_GUIDANCE2", block_min_size=0, block_max_size=2){
+  gene_numbers = orthoblocks$geneNumber
+  matching_rows = block_min_size < gene_numbers & gene_numbers < block_max_size
+  matching_dnds = na.omit(unlist(as.data.frame(orthoblocks[matching_rows,])[[alignment_type]], recursive=T))
+  matching_dnds
+}
+
+dndsBlocks <- SimpleList()
+dndsBlocks$Oki_Osa <- SimpleList()
+# Subset to syntenic blocks with more than 0 genes and less than 2 - aka, just one gene.
+dndsBlocks$Oki_Osa$blocksize_1_gene <- get_dnds(orthoBlocks$Oki_Osa, alignment_type="dNdS_GUIDANCE2", block_min_size=0, block_max_size=2)
+# Subset to syntenic blocks with more than 1 gene.
+dndsBlocks$Oki_Osa$blocksize_gt_1_gene <- get_dnds(orthoBlocks$Oki_Osa, alignment_type="dNdS_GUIDANCE2", block_min_size=2, block_max_size=Inf)
+
+# Plot distributions of dN/dS by syntenic block size.
+ggplot(as.data.frame(dndsBlocks$Oki_Osa), aes(y=value, fill=group_name)) +
+  geom_histogram(position='identity', bins=30) +
+  facet_wrap(~group_name, scales='free_x') +
+  ggtitle("Oki/Osa: dN/dS of individual genes vs. syntenic block genes")
+```
+
+Maybe there is a difference there, maybe not. Let's see.
+
+```{r evaluating_dnds_blocks_oki_osa_2, fig.height=4, fig.width=6, dev=c("svg", "png")}
+ggplot(as.data.frame(dndsBlocks$Oki_Osa), aes(y=value, fill=group_name)) +
+  geom_boxplot(position='identity') +
+  facet_wrap(~group_name, scales='free_x') +
+  ggtitle("Oki/Osa: dN/dS of individual genes vs. syntenic block genes")
+# Are the differences significant?
+(pairwise.t.test(g=as.data.frame(dndsBlocks$Oki_Osa)$group_name,
+                 x=as.data.frame(dndsBlocks$Oki_Osa)$value,
+                 p.adjust.method='bonferroni'))
+```
+
+Indeed, in this case it seems there is a modestly significant difference between individual genes and genes in syntenic blocks. Does this relationship hold for other organisms?
+
+```{r evaluating_dnds_blocks_oki_bar, fig.height=4, fig.width=6, dev=c("svg", "png")}
+dndsBlocks$Oki_Bar <- SimpleList()
+dndsBlocks$Oki_Bar$blocksize_1_gene <- get_dnds(orthoBlocks$Oki_Bar, alignment_type="dNdS_GUIDANCE2", block_min_size=0, block_max_size=2)
+dndsBlocks$Oki_Bar$blocksize_gt_1_gene <- get_dnds(orthoBlocks$Oki_Bar, alignment_type="dNdS_GUIDANCE2", block_min_size=2, block_max_size=Inf)
+
+ggplot(as.data.frame(dndsBlocks$Oki_Bar), aes(y=value, fill=group_name)) +
+  geom_histogram(position='identity', bins=30) +
+  facet_wrap(~group_name, scales='free_x') +
+  ggtitle("Oki/Bar: dN/dS of individual genes vs. syntenic block genes")
+
+ggplot(as.data.frame(dndsBlocks$Oki_Bar), aes(y=value, fill=group_name)) +
+  geom_boxplot(position='identity') +
+  facet_wrap(~group_name, scales='free_x') +
+  ggtitle("Oki/Bar: dN/dS of individual genes vs. syntenic block genes")
+
+(pairwise.t.test(g=as.data.frame(dndsBlocks$Oki_Bar)$group_name,
+                 x=as.data.frame(dndsBlocks$Oki_Bar)$value,
+                 p.adjust.method='bonferroni'))
+```
+
+For Okinawa-Barcelona, it is also significant.
+
+```{r evaluating_dnds_blocks_osa_bar, fig.height=4, fig.width=6, dev=c("svg", "png")}
+dndsBlocks$Osa_Bar <- SimpleList()
+dndsBlocks$Osa_Bar$blocksize_1_gene <- get_dnds(orthoBlocks$Osa_Bar, alignment_type="dNdS_GUIDANCE2", block_min_size=0, block_max_size=2)
+dndsBlocks$Osa_Bar$blocksize_gt_1_gene <- get_dnds(orthoBlocks$Osa_Bar, alignment_type="dNdS_GUIDANCE2", block_min_size=2, block_max_size=Inf)
+
+ggplot(as.data.frame(dndsBlocks$Osa_Bar), aes(y=value, fill=group_name)) +
+  geom_histogram(position='identity', bins=30) +
+  facet_wrap(~group_name, scales='free_x') +
+  ggtitle("Osa/Bar: dN/dS of individual genes vs. syntenic block genes")
+
+ggplot(as.data.frame(dndsBlocks$Osa_Bar), aes(y=value, fill=group_name)) +
+  geom_boxplot(position='identity') +
+  facet_wrap(~group_name, scales='free_x') +
+  ggtitle("Osa/Bar: dN/dS of individual genes vs. syntenic block genes")
+
+(pairwise.t.test(g=as.data.frame(dndsBlocks$Osa_Bar)$group_name,
+                 x=as.data.frame(dndsBlocks$Osa_Bar)$value,
+                 p.adjust.method='bonferroni'))
+
+```
+
+But for Osaka-Barcelona, it is not.
+
+A contributing factor might be that short and long arms differ in the size of their syntenic blocks,
+and as we have already observed, there is an arm-specific difference in dN/dS values.
+
+```
 
 ```
 
