--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -26,6 +26,32 @@ pairwise genome alignments between _Oikopleura_ genomes.
 The core functions used here are maintained in our _GenomicBreaks_ R package,
 which is fully documented at: <https://oist.github.io/GenomicBreaks>.
 
+## How to build this site
+
+As some of the computations take time, I build the vignettes on _Deigo_ using
+the `?pkgdown::build_site` function, in a Git clone on my subdirectory
+on `/flash`.
+
+```
+/bucket/LuscombeU/common/Singularity/GenomicBreaks-0.9.1.sif Rscript -e 'pkgdown::build_site(devel=TRUE, lazy=TRUE)'
+```
+
+Sometimes it is necessary to upgrade the OikScrambling package; this is done with:
+
+```
+/bucket/LuscombeU/common/Singularity/GenomicBreaks-0.9.1.sif R CMD INSTALL .
+```
+
+And to update `GenomicBreaks`:
+
+```
+/bucket/LuscombeU/common/Singularity/GenomicBreaks-0.9.1.sif Rscript -e "remotes::install_github('oist/GenomicBreaks', repos=BiocManager::repositories())"
+```
+
+The trick is that the `GenomicBreaks` singularity images are hardcoded to
+install new packages in `R/library/GBreaks_singularity`, which bypasses the
+the problem that the images are read-only.
+
 ## Load pacakges
 
 ### Core packages that provide functions we use a lot.
